--- a/style.css
+++ b/style.css
@@ -59,7 +59,22 @@
      background:transparent;
      font-size:2vw;
 }
-
+/* AJUSTE DE LINHAS HR */
+hr:nth-of-type(1){
+  margin: -14% 0 14%;
+}
+hr:nth-of-type(2){
+  margin: -2% 0 14%;
+}
+hr:nth-of-type(3){
+  margin: 15% 0 12%;
+}
+hr:nth-of-type(4){
+  margin: 12% 0 13%;
+}
+hr:nth-of-type(5){
+  margin: 16% 0 14%;
+}
 /* lp_02 usado para as seções com imagem a direita*/
 #corpo .lp_02::before { padding-top: 69.0625%; }
 #corpo .lp_02 .texto-servico {
